# app

./: .bandit  .coverage  .env  .env.local  .env.prod  .env.stage  .flake8  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CHANGELOG  README.md  badges.json  brainly.html  cookiecutter-config-file.yml  docker-compose.dev.yml  docker-compose.dev64.yml  docker-compose.override.yml  docker-compose.yml  get-updated-badge-info.sh  get-updated-badge.sh  pytest.ini  test.sh
.github/workflows/: bandit.yml  black.yml  flake8.yml  isort.yml  mypy.yml  pytest.yml
backend/: .coverage  Dockerfile  Dockerfile.arm64  backend.dockerfile  celeryworker.arm64dockerfile  celeryworker.dockerfile
backend/app/: .flake8  .gitignore  Dockerfile  Dockerfile.arm64  export_celery.sh  prestart.sh  pyproject.toml  test.py  worker-start.sh
backend/app/app/: .coveragerc  backend_pre_start.py  celeryworker_pre_start.py  configs.py  helpers.py  initial_data.py  main.py  pytest.ini  tests_pre_start.py  utils.py  worker.py
backend/app/app/api/: deps.py
backend/app/app/api/api_v1/: api.py
backend/app/app/api/api_v1/endpoints/: aws.py  login.py  users.py  utils.py
backend/app/app/core/: celery_app.py  config.py  security.py
backend/app/app/crud/: __init__.py  base.py  crud_confirm.py  crud_user.py
backend/app/app/db/: base.py  base_class.py  init_db.py  session.py
backend/app/app/email-templates/src/: button.mjml  button_reset.mjml  image.mjml  reset_password.mjml  social.mjml  style.mjml  welcome.mjml
backend/app/app/libs/: error.py
backend/app/app/models/: __init__.py  confirm.py  user.py
backend/app/app/schemas/: __init__.py  aws.py  base.py  confirm.py  user.py
backend/app/app/ssh_module/: connect.py
backend/app/app/tests/: conftest.py
backend/app/app/tests/api/api_v1/: test_celery.py  test_login.py  test_users.py
backend/app/app/tests/crud/: test_user.py
backend/app/app/tests/ssh_module/: test_connect.py
backend/app/app/tests/utils/: auth.py  db.py  item.py  user.py  utils.py
backend/app/ssh_module/: connect.py
docs/: get-updated-badge-isort.sh  get-updated-badge-mypy.sh
frontend/: .gitignore  Dockerfile  Dockerfile.arm64  README.md  nginx-backend-not-found.conf  package-lock.json  package.json  vue.config.js
frontend/public/: index.html
frontend/src/: App.vue  api.ts  env.ts  index.js  main.js  router.ts  store.js  user.js  utils.js  utils.ts
frontend/src/assets/scss/: style.scss
frontend/src/components/: Googel.js  Header.js  HeaderAuth.js  HistoryOrder.js  Layout.js  LayoutAuth.js  NotificationsManager.vue  Pagination.js  RouterComponent.vue
frontend/src/context/: ThemeContext.js
frontend/src/hocs/: withToken.js
frontend/src/interfaces/: index.ts
frontend/src/pages/: dashboard.js  start.js
frontend/src/plugins/: vuetify.js  webfontloader.js
frontend/src/router/: index.js
frontend/src/services/: api.js  const.js  token.js
frontend/src/store/: state.ts
frontend/src/styles/: overrides.css  overrides.css.map
frontend/src/views/: Dashboard.vue  GoogleMaps.vue  Icons.vue  Login.vue  Notifications.vue  PasswordRecovery.vue  RegularTables.vue  ResetPassword.vue  Typography.vue  UserProfile.vue
(+63 files in other folders)
