[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Dmitriy Golub <dg@mongodb.tech>"]

[tool.poetry.dependencies]
python = "^3.9"
passlib = {extras = ["bcrypt"], version = "^1.7.2"}
tenacity = "^6.1.0"
raven = "^6.10.0"
python-jose = {extras = ["cryptography"], version = "^3.1.0"}
typer = "^0.4.0"
progress = "^1.6"
pymotyc = "^0.9.0"
fastapi = "^0.75.2"
python-multipart = "^0.0.5"
requests = "^2.27.1"
emails = "^0.6"
gunicorn = "^20.1.0"
Jinja2 = "^3.1.2"
alembic = "^1.7.7"
aiohttp = "^3.8.1"
asyncio = "^3.4.3"
uvicorn = "^0.17.6"
motor = "^2.0.0"
pytest = "^7.1.2"
pytest-asyncio = "^0.18.3"
cached-property = "^1.5.2"
celery = "^5.2.7"
importlib-metadata = "^4.11.4"
google-search-results = "^2.4.1"
selenium = "^4.2.0"
undetected-chromedriver = "^3.1.5"
cfscrape = "^2.1.1"
cloudscraper = "^1.2.60"
html2text = "^2020.1.16"
parsel = "^1.6.0"
mypy = "^0.961"
pydantic = {extras = ["email"], version = "^1.9.1"}
email-validator = "^1.2.1"
pytest-mock = "^3.7.0"
black = "^22.3.0"
bandit = "^1.7.4"
sqlalchemy-stubs = "^0.4"
isort = "^5.10.1"
boto3 = "^1.24.27"

[tool.poetry.dev-dependencies]
autoflake = "^1.3.1"
flake8 = "^3.7.9"
pytest-cov = "^2.8.1"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
line_length = 88
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

